--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "shadcn": "^2.1.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
