--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.0.2",
     "lucide-react": "^0.441.0",
-    "next": "14.2.11",
+    "next": "^14.2.11",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
